@startuml
hide circle
skinparam linetype ortho

entity Student {
  * id : string <<generated>>
  --
  * name : string
  * email : string
  * department_id : string <<FK>>
}

entity Department {
  * id : string <<generated>>
  --
  * name : string
}

entity Enrollment {
  * id : string <<composite key>>
  --
  * student_id : string <<FK>>
  * course_id : string <<FK>>
  --
  * grade : string
}

entity Course {
  * id : string <<generated>>
  --
  * name : string
  * code : string
  * credit : number
}

entity Lecturer  {
  * id : string <<generated>>
  --
  * name : string
  * email : string
  * title : string
  * department_id : string <<FK>>
}

entity LecturerCourse {
  * id : string <<composite key>>
  --
  * lecturer_id : string <<FK>>
  * course_id : string <<FK>>
  --
  * role : string
  * status : string
}

Student }|--|| Department : "belongs to"
Student ||--o{ Enrollment : "has"
Enrollment }|--|| Course : "takes"
Lecturer }|--|| Department : "belongs to"
Lecturer |o--|{ LecturerCourse : "teaches"
Course ||--|{ LecturerCourse : "is taught to"
@enduml